Queue selection is db configurable supporting weighted or direct assignment.
